--- a/test/Grammtik-Einstiegstest-RolandSchaefer.tex
+++ b/test/Grammtik-Einstiegstest-RolandSchaefer.tex
@@ -189,6 +189,7 @@ Im Studium werden diese Wortarten neu definiert, aber hier geht es erst einmal d
 \end{itemize}
 
 Bestimmen Sie die Wortklassen im folgenden Kurztext, indem Sie die entsprechenden Abkürzungen unter die Wörter schreiben.
+Gehen Sie dabei immer von der Wortklasse im gegebenen syntaktischen Kontext aus!
 Für die ersten beiden Wörter wurde das beispielhaft schon erledigt.
 
 \Zeile
@@ -433,7 +434,9 @@ Bestimmen Sie die Person -- also 1, 2 oder 3 -- der unterstrichenen Wörter (bzw
 
 \subsection{\fbox{\textbf{Präsenzaufgabe!}} Finitheit}
 
-\ul{Unterstreichen} Sie im folgenden Text alle finiten Verbformen und \mybox{rahmen} Sie alle infiniten Verbformen ein. (Quelle: https://de.wikipedia.org/wiki/Sokal-Affäre, modifiziert)
+\ul{Unterstreichen} Sie im folgenden Text alle finiten Verbformen und \mybox{rahmen} Sie alle infiniten Verbformen ein.
+Als infinite Verbformen sollen hier auch Partizipien in adjektivischer Funktion usw.\ gelten.
+(Quelle: https://de.wikipedia.org/wiki/Sokal-Affäre, modifiziert)
 
 \begin{quote}
   \onehalfspacing
