--- a/test/Grammatik-Einstiegstest-RolandSchaefer.tex
+++ b/test/Grammatik-Einstiegstest-RolandSchaefer.tex
@@ -1,4 +1,43 @@
+%\def\FU{}
+
 \documentclass[12pt,a4paper,twoside]{article}
+
+\usepackage{environ}
+\usepackage{ifthen}
+
+\NewEnviron{ignorable}[1][]{%
+  \ifthenelse{\isundefined{\showallignorables}}
+    {\ifthenelse{\isundefined{\hideallignorables} \AND \NOT\equal{#1}{h}}
+        {\BODY}
+        {}%
+    }
+    {\BODY}%
+}
+
+\ifdefined\FU
+  \newcommand{\hideallignorables}{Hides all ignorables; It has priority over classes}  
+  \newcommand{\praesenzaufgabe}{}
+  \newcommand{\FUBreak}{\clearpage}
+  \newcommand{\FSUBreak}{}
+  \newcommand{\FUZeile}{\hspace{\baselineskip}}
+  \newcommand{\FSUZeile}{}
+  \newcommand{\FUHalbzeile}{\hspace{0.5\baselineskip}}
+  \newcommand{\FSUHalbzeile}{}
+  \newcommand{\FUDoppelzeile}{\hspace{2\baselineskip}}
+  \newcommand{\FSUDoppelzeile}{}
+\else
+  \newcommand{\showallignorables}{Shows all ignorables; It has priority over classes and hideallignorables}
+  \newcommand{\praesenzaufgabe}{\textbf{Präsenzaufgabe!}\ |\ }
+  %\newcommand{\praesenzaufgabe}{\fbox{\textbf{Präsenzaufgabe!}}}
+  \newcommand{\FUBreak}{}
+  \newcommand{\FSUBreak}{\clearpage}
+  \newcommand{\FUZeile}{}
+  \newcommand{\FSUZeile}{\hspace{\baselineskip}}
+  \newcommand{\FUHalbzeile}{}
+  \newcommand{\FSUHalbzeile}{\hspace{0.5\baselineskip}}
+  \newcommand{\FUDoppelzeile}{}
+  \newcommand{\FSUDoppelzeile}{\hspace{2\baselineskip}}
+\fi
 
 \usepackage[margin=2cm]{geometry}
 
@@ -18,6 +57,7 @@
 \usepackage{soul}
 \usepackage{enumitem}
 \usepackage{marginnote}
+\usepackage{longtable}
 
 \usepackage[maxbibnames=99,
   maxcitenames=2,
@@ -99,10 +139,17 @@
 \usetikzlibrary{arrows,positioning} 
 
 
-\author{Prof.\ Dr.\ Roland Schäfer | Schwerpunkt \textit{Grammatik und Lexikon}}
-\title{FSU Jena | Germanistische Sprachwissenschaft\\Einstiegstest Grammatik}
-\date{Version Sommer 2023 (\today)}
+\author{Prof.\ Dr.\ Roland Schäfer | Schwerpunkt \textit{Grammatik und Lexikon} | FSU Jena}
+\title{Germanistische Sprachwissenschaft\\Einstiegstest Grammatik}
 
+\ifdefined\FU
+\date{Version für FU Berlin, Sommer 2023 (\today)\\[\baselineskip]
+  Vollständige Version und weitere Angaben:\\[0.25\baselineskip]
+    \url{https://rolandschaefer.net/archives/2504}}
+\else
+\date{Version Sommer 2023 (\today)\\[0.5\baselineskip]
+    \url{https://rolandschaefer.net/archives/2504}}
+\fi
 
 \usepackage{fontspec}
 \defaultfontfeatures{Ligatures=TeX,Numbers=OldStyle, Scale=MatchLowercase}
@@ -119,6 +166,18 @@
 \setlength{\headsep}{50pt}
 \setlength{\textheight}{\textheight-25pt}
 
+\newenvironment{spread}
+{%
+  \newdimen\origiwspc%
+  \newdimen\origiwstr%
+  \origiwspc=\fontdimen2\font%
+  \origiwstr=\fontdimen3\font%
+  \fontdimen2\font=1em%
+  \doublespacing%
+}{%
+  \fontdimen2\font=\origiwspc%
+  \fontdimen3\font=\origiwstr%
+}
 
 \begin{document}
 
@@ -134,9 +193,12 @@
 \vspace{2cm}
 
 \begin{center}
+
+  \begin{ignorable}
   \fbox{\Large{Bearbeiten Sie in Präsenz nur: \textbf{1.1}, \textbf{1.8} und \textbf{alle Teilaufgaben von 2}.}}
 
   \Zeile
+  \end{ignorable}
 
   \Large{Dieser Test dient nur Ihrer eigenen Information.\\
 
@@ -170,7 +232,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Wortarten im Deutschen}
 
-\subsection{\fbox{\textbf{Präsenzaufgabe!}} Klassifikation}
+\subsection{\praesenzaufgabe Klassifikation}
 
 Die wichtigsten Wortarten des Deutschen sind die folgenden.
 In runden Klammern steht jeweils eine übliche Abkürzung, in eckigen Klammern teilweise gebräuchliche \textbf{deutsche Namen der Wortklassen, die wir im Studium allerdings prinzipiell nicht verwenden}.
@@ -232,7 +294,8 @@ Für die ersten beiden Wörter wurde das beispielhaft schon erledigt.
   \end{tabular}
 \end{center}
 
-\Zeile
+\FUBreak
+\FSUBreak
 
 \subsection{Substantiv}
 
@@ -250,6 +313,8 @@ Kreuzen Sie die korrekten Aussagen an.
   \item Man kann mit zusätzlichen Endungen aus Verben und Adjektiven neue Substantive bilden.
 \end{itemize}
 
+\FUZeile
+
 \subsection{Adjektiv}
 
 Kreuzen Sie die korrekten Aussagen an.
@@ -266,6 +331,8 @@ Kreuzen Sie die korrekten Aussagen an.
   \item Prädikative Adjektive treten immer zusammen mit der Form eines Verbs wie \textit{sein}, \textit{bleiben}, \textit{werden} auf.
 \end{itemize}
 
+\FUZeile
+
 \subsection{Artikel}
 
 Kreuzen Sie die korrekten Aussagen an.
@@ -279,6 +346,9 @@ Kreuzen Sie die korrekten Aussagen an.
 
 % definit vs. indefinit
 
+\FUBreak
+\FSUBreak
+
 \subsection{Pronomen}
 
 Kreuzen Sie die korrekten Aussagen an.
@@ -291,6 +361,8 @@ Kreuzen Sie die korrekten Aussagen an.
   \item Das Personalpronomen hat spezifische Formen für die drei grammatischen Personen im Singular.
   \item Das Demonstrativpronomen hat spezifische Formen für die drei grammatischen Personen im Singular.
 \end{itemize}
+
+\FUHalbzeile
 
 \subsection{Verb}
 
@@ -312,7 +384,7 @@ Kreuzen Sie die korrekten Aussagen an.
   \item Es gibt einen Infinitiv des Perfekts.
 \end{itemize}
 
-\Zeile
+\FUHalbzeile
 
 \subsection{Präposition}
 
@@ -325,9 +397,10 @@ Kreuzen Sie die korrekten Aussagen an.
   \item Manche Präpositionen können je nach Bedeutung entweder den Dativ oder den Akkusativ fordern.
 \end{itemize}
 
-\Zeile
+\FUBreak
+\FSUBreak
 
-\subsection{\fbox{\textbf{Präsenzaufgabe!}} Unterklassifikation von Verben}
+\subsection{\praesenzaufgabe Unterklassifikation von Verben}
 
 Klassifizieren Sie die unterstrichenen Verben als starke Verben, schwache Verben, Modalverben oder Hilfsverben.
 
@@ -345,12 +418,14 @@ Klassifizieren Sie die unterstrichenen Verben als starke Verben, schwache Verben
   \end{tabular}
 \end{center}
 
-\newpage
+\FSUZeile
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Flexionskategorien deutscher Wörter}
 
-\subsection{\fbox{\textbf{Präsenzaufgabe!}} Flexion (Beugung)}
+\FSUZeile
+
+\subsection{\praesenzaufgabe Flexion (Beugung)}
 
 Bilden Sie die genannten Formen der unten in ihrer jeweiligen Nennform angegebenen Wörter.
 Hinweis: Mit Präteritum bezeichnet man die einfache Vergangenheitsform.
@@ -375,7 +450,9 @@ Hinweis: Mit Präteritum bezeichnet man die einfache Vergangenheitsform.
     \end{tabular}
 \end{center}
 
-\subsection{\fbox{\textbf{Präsenzaufgabe!}} Kasus (Fall)}
+\FSUBreak
+
+\subsection{\praesenzaufgabe Kasus (Fall)}
 
 Bestimmen Sie die Kasus -- also Nominativ, Akkusativ, Dativ, Genitiv -- der unterstrichenen Wörter.
 
@@ -393,7 +470,9 @@ Bestimmen Sie die Kasus -- also Nominativ, Akkusativ, Dativ, Genitiv -- der unte
   \end{tabular}
 \end{center}
 
-\subsection{\fbox{\textbf{Präsenzaufgabe!}} Genus (grammatisches Geschlecht)}
+\FSUZeile
+
+\subsection{\praesenzaufgabe Genus (grammatisches Geschlecht)}
 
 Bestimmen Sie das Genus -- also Maskulinum, Neutrum oder Femininum -- der unterstrichenen Wörter.
 
@@ -411,8 +490,11 @@ Bestimmen Sie das Genus -- also Maskulinum, Neutrum oder Femininum -- der unters
   \end{tabular}
 \end{center}
 
+\FSUZeile
 
-\subsection{\fbox{\textbf{Präsenzaufgabe!}} Person}
+\begin{ignorable}
+
+\subsection{\praesenzaufgabe Person}
 
 Bestimmen Sie die Person -- also 1, 2 oder 3 -- der unterstrichenen Wörter (bzw. Wortgruppen im Fall von \textit{Herrn Gödel}).
 
@@ -432,19 +514,31 @@ Bestimmen Sie die Person -- also 1, 2 oder 3 -- der unterstrichenen Wörter (bzw
   \end{tabular}
 \end{center}
 
-\subsection{\fbox{\textbf{Präsenzaufgabe!}} Finitheit}
+\end{ignorable}
+
+\FUZeile
+\FSUBreak
+
+\subsection{\praesenzaufgabe Finitheit}
 
 \ul{Unterstreichen} Sie im folgenden Text alle finiten Verbformen und \mybox{rahmen} Sie alle infiniten Verbformen ein.
 Als infinite Verbformen sollen hier auch Partizipien in adjektivischer Funktion usw.\ gelten.
-(Quelle: https://de.wikipedia.org/wiki/Sokal-Affäre, modifiziert)
 
 \begin{quote}
-  \onehalfspacing
+  \begin{spread}
   \it Die Sokal-Affäre (auch Sokal-Debatte oder Sokal-Kontroverse) war eine Auseinandersetzung über die intellektuellen Standards in den Sozial- und Geisteswissenschaften, die durch die Veröffentlichung eines Hoax-Artikels des Physikers Alan Sokal in der sozialwissenschaftlichen Fachzeitschrift Social Text ausgelöst wurde. Sokals Artikel erschien 1996 in einer den Science Wars (Wissenschaftskriegen) gewidmeten Ausgabe, die die US-spezifische Auseinandersetzung zwischen wissenschaftlichem Realismus und Postmoderne thematisieren sollte.\\
 Sokals Beitrag war in postmodernem Jargon formuliert und gab vor, die Quantengravitation als linguistisches und soziales Konstrukt zu deuten, wobei die Quantenphysik die postmodernistische Kritik stütze. Sokal hatte dabei absichtlich zahlreiche logische und inhaltliche Fehler eingestreut, die den Redakteuren der Zeitschrift – sie hatten für die Schlussredaktion keine Physikexperten hinzugezogen – jedoch nicht auffielen. Es folgte eine wissenschaftstheoretische und öffentliche Debatte über mangelnde intellektuelle Strenge bei der Bewertung pseudowissenschaftlicher Artikel in den Sozial- und Geisteswissenschaften und einen möglicherweise schädlichen Einfluss postmoderner Philosophie auf diese Wissenschaften. Weiterhin wurde diesen Disziplinen vorgeworfen, naturwissenschaftliche Konzepte in sinnloser oder missbräuchlicher Weise für ihre Lehren zu verwenden.
+
+  \footnotesize{[Quelle: https://de.wikipedia.org/wiki/Sokal-Affäre, modifiziert]}
+  \end{spread}
 \end{quote}
 
-\subsection{\fbox{\textbf{Präsenzaufgabe!}} Tempus (Zeitform)}
+\FSUBreak
+
+
+\begin{ignorable}
+
+\subsection{\praesenzaufgabe Tempus (Zeitform)}
 
 Bestimmen Sie das Tempus der folgenden Sätze.
 Die Tempuskategorien im weiteren Sinn sind im Deutschen: \textbf{Präsens} (Gegenwart), \textbf{Präteritum} (einfache Vergangenheit), \textbf{Perfekt} (vollendete Vergangenheit), \textbf{Plusquamperfekt} (Vorvergangenheit), \textbf{Futur 1} (einfache Zukunft) und \textbf{Futur 2} (Futurum Exactum oder Vergangenheit in der Zukunft).
@@ -472,9 +566,7 @@ Verwenden Sie ggf.\ die Abkürzungen \textbf{Präs}, \textbf{Prät}, \textbf{Per
   \end{tabular}
 \end{center}
 
-\Doppelzeile
-
-\subsection{\fbox{\textbf{Präsenzaufgabe!}} Modus (Aussageweise)}
+\subsection{\praesenzaufgabe Modus (Aussageweise)}
 
 Setzen Sie den folgenden kurzen Absatz zunächst in den Konjunktiv 1, dann in den Konjunktiv 2.
 Folgen Sie den Normregeln für die Ersetzung von Formen, die ansonsten nicht eindeutig wären.
@@ -525,8 +617,7 @@ Folgen Sie den Normregeln für die Ersetzung von Formen, die ansonsten nicht ein
   \end{tabular}
 \end{center}
 
-
-\subsection{\fbox{\textbf{Präsenzaufgabe!}} Imperativ (Aufforderungsform)}
+\subsection{\praesenzaufgabe Imperativ (Aufforderungsform)}
 
 Kreuzen Sie die Sätze an, in denen eine echte Imperativform vorkommt.
 
@@ -544,7 +635,11 @@ Kreuzen Sie die Sätze an, in denen eine echte Imperativform vorkommt.
   \item \textit{Gibst du das wohl sofort deiner Schwester zurück!}
 \end{itemize}
 
-\subsection{\fbox{\textbf{Präsenzaufgabe!}} Genus verbi (Aktiv\slash Passiv)}
+\end{ignorable}
+
+\FUBreak
+
+\subsection{\praesenzaufgabe Genus verbi (Aktiv\slash Passiv)}
 
 Setzen Sie die folgenden Sätze ins Aktiv, wenn es Passivsätze sind, und ins Passiv, wenn es Aktivsätze sind.
 
@@ -566,7 +661,6 @@ Setzen Sie die folgenden Sätze ins Aktiv, wenn es Passivsätze sind, und ins Pa
   \end{tabular}
 \end{center}
 
-\newpage
 
 \begin{center}
   \begin{tabular}[h]{cp{0.9\textwidth}}
@@ -591,8 +685,11 @@ Setzen Sie die folgenden Sätze ins Aktiv, wenn es Passivsätze sind, und ins Pa
   \end{tabular}
 \end{center}
 
+\FUBreak
 
-\section{Satzbau}
+\section{Satzbau (Syntax)}
+
+\FUZeile
 
 \subsection{Satzglieder}
 
@@ -612,6 +709,8 @@ Zeichnen Sie einen \mybox{Kasten} um jedes Satzglied in folgenden Sätzen.
 
   \ex \textit{Das Auto der Kollegin streikt mal wieder.}
 \end{exe}
+
+\FUZeile
 
 \subsection{Subjekt}
 
@@ -635,14 +734,15 @@ Unterstreichen Sie das Subjekt in den folgenden Sätzen.
 
 \end{exe}
 
+\FUBreak
+
 \subsection{Objekte und adverbiale Bestimmungen}
 
 \textbf{\ul{Unterstreichen}} Sie im folgenden Text die direkten Objekte in den folgenden Sätzen und \textbf{\ol{überstreichen}} Sie in denselben Sätzen alle indirekten Objekte. Die Präpositionalobjekte \textbf{\mybox{rahmen}} Sie ein.
 Die adverbialen Bestimmungen \textbf{(klammern)} Sie bitte ein.
-(Quelle: https://de.wikipedia.org/wiki/Schlacht\_von\_Worringen, modifiziert)
 
 \begin{quote}
-  \onehalfspacing
+  \begin{spread}
   Die Schlacht von Worringen war 1288 das kriegerische Finale im zuvor bereits sechs Jahre währenden Limburger Erbfolgestreit.
   Hauptkontrahenten des Konflikts waren Siegfried von Westerburg, Erzbischof von Köln, und Herzog Johann I. von Brabant.
   Der Ausgang der Schlacht veränderte das Machtgefüge im gesamten Nordwesten Mitteleuropas.\\
@@ -653,9 +753,14 @@ Die adverbialen Bestimmungen \textbf{(klammern)} Sie bitte ein.
   Die Gewinner der Schlacht hatten Tatsachen geschaffen, die Siegfried neben der Lösegeldzahlung von 12.000 Mark wohl oder übel durch den Sühnevertrag billigen musste.
   Außerdem musste er auf sein Befestigungsrecht im Bergischen Land verzichten.
   Eberhard von der Mark erhielt Befestigungshoheit und Adolf von Berg sein Münzrecht, auf das er 1279 zugunsten des Erzbischofs hatte verzichten müssen, zurück.
+
+  \footnotesize{[Quelle: https://de.wikipedia.org/wiki/Schlacht\_von\_Worringen, modifiziert]}
+  \end{spread}
 \end{quote}
 
 %\subsection{Satzgliedstellung}
+
+\FUBreak
 
 \subsection{Nebensätze}
 
@@ -675,12 +780,14 @@ Bestimmen Sie die Nebensätze in den folgenden Sätzen als Subjektsatz, Objektsa
   \end{tabular}
 \end{center}
 
+\begin{ignorable}
+
+\FSUZeile
+
 \subsection{Infinitivgruppen}
 
 Unterstreichen Sie die kompletten Infinitivgruppen (auch: erweiterte Infinitive) in folgenden Sätzen.
 Bestimmen Sie außerdem ihre Funktion im Satz: Subjekt, Objekt oder Adverbial.
-
-\Zeile
 
 \begin{center}
   \begin{tabular}[h]{cp{0.65\textwidth}ccc}
@@ -702,16 +809,17 @@ Bestimmen Sie außerdem ihre Funktion im Satz: Subjekt, Objekt oder Adverbial.
   \end{tabular}
 \end{center}
 
-\Zeile
+\end{ignorable}
+
+\FUZeile
+\FSUBreak
 
 % %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Buchstaben und Laute}
+\section{Buchstaben und Laute (Graphematik)}
  
 \subsection{Laute und Buchstaben}
 
 Welche der unterstrichenen Buchstaben oder Buchstabengruppen in den folgenden Wortpaaren werden in beiden Wörtern gleich ausgesprochen?
-
-\Zeile
 
 \begin{center}
   \begin{tabular}[h]{rllcc}
@@ -731,7 +839,7 @@ Welche der unterstrichenen Buchstaben oder Buchstabengruppen in den folgenden Wo
   \end{tabular}
 \end{center}
 
-\newpage
+\FUBreak
 
 \subsection{Silben}\label{sec:silben}
 
@@ -740,7 +848,7 @@ Nutzen Sie dazu wie in Beispiel (0) demonstriert Punkte als Trenner.
 Für das erste Wort gibt es eine Lösung als Beispiel.
 
 \begin{center}
-  \begin{tabular}[h]{clp{0.5\textwidth}}
+  \begin{longtable}[h]{clp{0.5\textwidth}}
     && \\
     (0) & \textit{Tinte} & Tin.te \\ \cline{3-3}
     && \\
@@ -773,10 +881,8 @@ Für das erste Wort gibt es eine Lösung als Beispiel.
     (14) & \textit{Mangel} & \\ \cline{3-3}
     && \\
     (15) & \textit{Metropolis} & \\ \cline{3-3}
-  \end{tabular}
+  \end{longtable}
 \end{center}
-
-\Zeile
 
 \subsection{Betonung}
 
